# SimpleBasicLSPDAPServer

./: CMakeLists.txt  CMakeLists_header_only.txt  CMakeLists_simple.txt  README.md
include/dap/: dap_server.h
include/interpreter/: basic_interpreter.h  functions.h  lexer.h  parser.h  runtime.h  variables.h
include/lsp/: lsp_server.h
src/: main.cpp
src/dap/: dap_server.cpp
src/interpreter/: basic_interpreter.cpp  functions.cpp  lexer.cpp  parser.cpp  runtime.cpp  variables.cpp
src/lsp/: lsp_server.cpp
